Domain 3 - Networking/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-pod
spec:
  containers:
  - name: service-pod
    image: nginx
    ports:
        - containerPort: 80
