Domain 3 - Networking/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kplabs-service
subsets:
  - addresses:
      - ip: 10.244.0.23
    ports:
      - port: 80
