Domain 3 - Networking/service-selector.yaml
apiVersion: v1
kind: Service
metadata:
   name: kplabs-service-selector
spec:
   selector:
     run: nginx
   ports:
   - port: 80
     targetPort: 80
